--- a/hw_5/style.css
+++ b/hw_5/style.css
@@ -283,7 +283,8 @@ body {
 .items__wrap {
     display: grid;
     grid-gap: 30px;
-    grid-template-columns: repeat(3, 1fr);    
+    grid-template-columns: repeat(auto-fit, 360px);
+    justify-content: center;    
 }
 
 .hov__button {
@@ -372,17 +373,14 @@ body {
 
     .title {
         font-size: 44px;
-        font-weight: 900;
     }
     
     .lux {   
         font-size: 24px;
-        font-weight: 700;
     }
     
     .fashion {
         font-size: 24px;
-        font-weight: 700;
     }
 
     .rect {
@@ -426,7 +424,6 @@ body {
 
     .prod__items {
         grid-gap: 19px;
-
     }
 
     .featured__items__text {
@@ -442,11 +439,100 @@ body {
 
     .items__wrap {
         grid-gap: 16px;
-        grid-template-columns: repeat(2, 1fr);
     }
 
     .items__button {
         margin-bottom: 70px;
     }
 
+}
+
+@media (max-width: 767px) {
+
+    .header__inner {
+        gap: 53%;
+    }
+
+    .login {
+        display: none;
+    }
+
+    .basket {
+        display: none;
+    }
+    
+    .description__img {
+        display: none;
+    }
+
+    .description__text {
+        padding-top: 0;
+        width: 100%;
+        height: 363px;
+        align-items: center;
+        justify-content: center;
+        gap: 15px;
+    }
+    
+    .title {
+        font-size: 38px;
+    }
+    
+    .lux {   
+        font-size: 20px;
+    }
+    
+    .fashion {
+        font-size: 20px;
+    }
+
+    .rect {
+        height: 61px;
+    }
+
+    .products__little__one {
+        width: 344px;
+        height: 249px;
+    }
+    
+    .products__little__two {
+        width: 344px;
+        height: 249px;
+    }
+    
+    .products__little__three {
+        width: 344px;
+        height: 249px;
+    }
+
+    .products__big {
+        width: 344px;
+        height: 111px;
+        grid-column-start: auto;
+    }
+
+    .products {
+        padding-left: calc(50% - 172px);
+        padding-right: calc(50% - 172px);
+        margin-bottom: 64px;
+    }
+
+    .prod__items {
+        grid-gap: 32px;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .featured__items__text {
+        margin-bottom: 65px;
+    }
+
+    .items {
+        padding-left: calc(50% - 180px);
+        padding-right: calc(50% - 180px);
+        margin-bottom: 41px;
+    }
+
+    .items__button {
+        margin-bottom: 85px;
+    }
 }
