--- a/hw_5/style.css
+++ b/hw_5/style.css
@@ -3,8 +3,17 @@
     padding: 0;
 }
 
+html {
+    height: -webkit-fill-available;
+}
+
 body {
     font-family: 'Lato', sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    justify-content: space-between;
+    min-height: -webkit-fill-available;
 }
 
 .container {
@@ -181,7 +190,7 @@ body {
 .products__little__one {
     width: 360px;
     height: 260px;
-    background: linear-gradient(rgba(33, 22, 22, 0.70), rgba(33, 22, 22, 0.70)), url(img/Layer\ 43.png);
+    background: linear-gradient(rgba(33, 22, 22, 0.70), rgba(33, 22, 22, 0.70)), url(img/Layerz_43.png);
     background-size: cover;
     display: flex;
     align-items: center;
@@ -191,7 +200,7 @@ body {
 .products__little__two {
     width: 360px;
     height: 260px;
-    background: linear-gradient(rgba(33, 22, 22, 0.70), rgba(33, 22, 22, 0.70)), url(img/Rectangle\ 30.png);
+    background: linear-gradient(rgba(33, 22, 22, 0.70), rgba(33, 22, 22, 0.70)), url(img/Rectangle_30.png);
     background-size: cover;
     display: flex;
     align-items: center;
@@ -201,7 +210,7 @@ body {
 .products__little__three {
     width: 360px;
     height: 260px;
-    background: linear-gradient(rgba(33, 22, 22, 0.70), rgba(33, 22, 22, 0.70)), url(img/Rectangle\ 31.png);
+    background: linear-gradient(rgba(33, 22, 22, 0.70), rgba(33, 22, 22, 0.70)), url(img/Rectangle_31.png);
     background-size: cover;
     display: flex;
     align-items: center;
@@ -231,7 +240,7 @@ body {
 .products__big {
     width: 1140px;
     height: 180px;
-    background: linear-gradient(rgba(33, 22, 22, 0.70), rgba(33, 22, 22, 0.70)), url(img/Rectangle\ 20.png);
+    background: linear-gradient(rgba(33, 22, 22, 0.70), rgba(33, 22, 22, 0.70)), url(img/Rectangle_20.png);
     background-size: cover;
     display: flex;
     align-items: center;
@@ -763,7 +772,7 @@ input::-webkit-input-placeholder {
     }
 
     .reviews__items {
-        overflow: hidden;
+        /* overflow: hidden; */
         width: 100%;
         height: 614px;
     }
