--- a/hw_5/style.css
+++ b/hw_5/style.css
@@ -190,7 +190,7 @@ body {
 .products__little__one {
     width: 360px;
     height: 260px;
-    background: linear-gradient(rgba(33, 22, 22, 0.70), rgba(33, 22, 22, 0.70)), url(img/Layerz_43.png);
+    background: linear-gradient(rgba(33, 22, 22, 0.70), rgba(33, 22, 22, 0.70)), url(img/Layer_43.png);
     background-size: cover;
     display: flex;
     align-items: center;
