--- a/hw_8/style.scss
+++ b/hw_8/style.scss
@@ -116,8 +116,7 @@ body {
     height: 148px;
     background-color: #F8F3F4;
     @include justify_align_center ();
-    gap: 46%;
-    
+    gap: 46%;    
 
     .current__page {
         @include font ($pink, 24px, 400);
@@ -141,7 +140,6 @@ body {
 .sort__filter {
     @include justify_center ();
 
-
     &__items {
         display: flex;
         width: 71.25%;
@@ -149,19 +147,36 @@ body {
 
         .filter__item {
             width: 360px;
-            height: 40px;
+            height: 132px;
             position: relative;
 
             .filter {
                 position:absolute;
                 z-index: 1;
-                width: 100%;
-                // padding: 13px 16px 16px;
+                padding-top: 13px;
+                padding-bottom: 16px;
+                top: 39px;
 
                 &[open] {
                     background-color: white;
                     box-shadow: 6px 4px 35px 0px rgba(0, 0, 0, 0.21);
-                    padding: 13px 16px 16px;
+                    padding-left: 16px;
+                    width: 100%;
+                    box-sizing: border-box;
+
+                    .filter__title {
+                        @include font (#EF5B70, 14px, 600);
+                    }
+
+                    .filter__category__summary {
+                        padding: 8px 11px 11px;
+                        border-left: 5px solid #F16D7F;
+                        border-bottom: 1px solid #EBEBEB;
+                    }
+                }
+
+                &[open] svg path {
+                    fill: #EF5B70;
                 }
 
                 &__summary {
@@ -171,6 +186,54 @@ body {
                     &::-webkit-details-marker {
                         display: none;
                     }
+
+                    &:hover {
+                        cursor: pointer;
+                    }
+
+                    .filter__title {
+                        @include font (black, 14px, 600);
+                    }
+                }
+
+                &__category {
+                    margin-top: 16px;
+
+                    &__summary {
+                        @include font (#6F6E6E, 14px, 400);
+                        display: block;
+
+                        &:hover {
+                            cursor: pointer;
+                        }
+                    }
+
+                    &[open] {
+                        .filter__category__summary {
+                            @include font (#EF5B70, 14px, 400);                   
+                        }
+
+                        .filter__category__items {
+                            padding-top: 24px;
+                            padding-left: 17px;
+                        }
+                    }
+
+                    &__items {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 11px;
+                        
+
+                        .filter__link {
+                            text-decoration: none;
+                            @include font (#6F6E6E, 14px, 400);
+                            
+                            &:hover {
+                                color: #EF5B70;
+                            }
+                        }
+                    }
                 }
             }
         }
@@ -179,13 +242,30 @@ body {
     .sort {
         display: flex;
         gap: 28px;
+        position: relative;
+        top: 51px;
 
         &__items {
             position: relative;
 
+            &[open] {
+                path {
+                    fill: #EF5B70;
+                }
+            }
+
             .sort__summary {
                 @include align_center ();
                 gap: 10px;
+                @include font (#6F6E6E, 14px, 400);
+
+                &:hover {
+                    cursor: pointer;
+                }
+
+                &:hover path {
+                    fill: #EF5B70;
+                }
             }
 
             .sort__item__category {
@@ -203,6 +283,23 @@ body {
 
                 .sort__link {
                     text-decoration: none;
+                    @include font (#6F6E6E, 14px, 400);
+
+                    &:hover {
+                        color: #EF5B70;
+                    }
+                }
+
+                .sort__label {
+                    @include font (#6F6E6E, 14px, 400);
+                    display: flex;
+                    gap: 9px;
+
+                    input {
+                        &:hover {
+                            cursor: pointer;
+                        }
+                    }
                 }
             }
         }
@@ -243,6 +340,19 @@ body {
             .item__img {
                 height: 420px;
                 @include justify_align_center ();
+            }
+
+            .item__img__2 {
+                height: 420px;
+                background-color: black;
+                @include justify_align_center ();
+
+                .temp {
+                    width: 360px;
+                    height: 420px;
+                    background-color: #F7E4E2;
+                    @include justify_align_center ();
+                }
             }
             
             .item__description {
