--- a/hw_8/style.css
+++ b/hw_8/style.css
@@ -176,6 +176,7 @@ body {
   background-color: white;
   box-shadow: 6px 4px 35px 0px rgba(0, 0, 0, 0.21);
   padding-left: 16px;
+  padding-right: 16px;
   width: 100%;
   box-sizing: border-box;
 }
