--- a/hw_9/style.scss
+++ b/hw_9/style.scss
@@ -128,12 +128,13 @@ body {
 .description__cart {
     margin-bottom: 128px;
     @include justify_center ();
+    flex-wrap: wrap;
     gap: 8%;
     
     &__products {
         display: flex;
         flex-direction: column;
-        width: 40.75%;
+        width: 652px;
 
         &-items {
             display: flex;
@@ -227,7 +228,7 @@ body {
                 &:hover {
                     color: white;
                     background:$pink;
-                    transition: background-color 1s linear;
+                    transition: background-color 1s linear, color .5s linear;
                     border: none;
                 }
 
@@ -246,7 +247,7 @@ body {
     }
 
     &__purchase {
-        width: 22.5%;
+        width: 360px;
         display: flex;
         flex-direction: column;
         gap: 57.5px;
@@ -268,7 +269,7 @@ body {
 
                 input {
                     height: 43px;
-                    @include font (black, 13px, 300);
+                    @include font ($pink, 13px, 300);
                     font-family: 'Lato', sans-serif;
                     border: 1px solid #A4A4A4;
                     outline: none;
@@ -297,7 +298,7 @@ body {
                 &:hover {
                     color: white;
                     background:$pink;
-                    transition: background-color 1s linear;
+                    transition: background-color 1s linear, color .5s linear;
                     border: none;
                 }
 
@@ -362,7 +363,7 @@ body {
                 &:hover {
                     color: $pink;
                     background: white;
-                    transition: background-color 1s linear;
+                    transition: background-color 1s linear, color 1s linear;
                     border: 1px solid;
                 }
 
