--- a/hw_10/style.scss
+++ b/hw_10/style.scss
@@ -131,7 +131,7 @@ body {
     margin-bottom: 96px;
 
     &-left {
-        width: 22.5%;
+        width: 360px;
 
         .name {
             display: flex;
