--- a/hw_6/helper/media_767.scss
+++ b/hw_6/helper/media_767.scss
@@ -131,6 +131,14 @@
         gap: 59px;
     }
 
+    .reviews__items .rev__item .feedback .feedback__text {
+        font-size: 18px;
+    }
+
+    .reviews__items .rev__item .feedback .feedback__text .text__ital {
+        font-size: 18px;
+    }
+
     .reviews__items .rev__item .subscribe {
         gap: 22px;
     }
